[package]
name = "hclrs"
version = "0.2.10"
authors = ["Charles Reiss <cr4bd@virginia.edu>"]

build = "build.rs" # LARLRPOP preprocessing

[features]
default = ["strict-boolean-ops", "require-mux-default", "disallow-multiple-mux-default", "disallow-unreachable-options", "json"]
strict-boolean-ops = []
strict-wire-widths-binary = []
require-mux-default = []
disallow-multiple-mux-default = []
disallow-unreachable-options = []
json = ["serde_json", "serde"]

[profile.release]
lto = true
debug = true

# Parser runtime library
[dependencies.lalrpop-util]
version = "0.19.5"

# Parser library
[build-dependencies.lalrpop]
version = "0.19.5"

[dependencies.log]
version = "0.4.3"

[dependencies.env_logger]
version = "0.8.3"

[dependencies.getopts]
version = "0.2.18"

[dependencies.serde_json]
version = "^1.0.64"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.console_error_panic_hook]
version = "*"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = { "version" = "0.2.74", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "rlib"]
