[package]
name = "hclrs"
version = "0.2.13"
authors = ["Charles Reiss <cr4bd@virginia.edu>"]

build = "build.rs" # LARLRPOP preprocessing

[features]
default = ["strict-boolean-ops", "require-mux-default", "disallow-multiple-mux-default", "disallow-unreachable-options"]
strict-boolean-ops = []
strict-wire-widths-binary = []
require-mux-default = []
disallow-multiple-mux-default = []
disallow-unreachable-options = []

[profile.release]
lto = true
debug = true

# Parser runtime library
[dependencies.lalrpop-util]
version = "0.19.5"

# Parser library
[build-dependencies.lalrpop]
version = "0.19.5"

[dependencies.log]
version = "0.4.3"

[dependencies.env_logger]
version = "0.8.3"

[dependencies.getopts]
version = "0.2.18"

[dev-dependencies.regex]
version = "1"

[dev-dependencies.assert_cmd]
version = "0.10"

[dev-dependencies.predicates]
version = "1"
